--- a/css/nggallery.css
+++ b/css/nggallery.css
@@ -169,9 +169,9 @@ html>body .ngg-album {
 	font-size:0.9em !important;
 	clear:both !important;
 	display:block !important;
-	padding-top:15px;
+	padding-top: 15px;
+    padding-bottom: 2px;
 	text-align:center;
-	
 }
 
 .ngg-navigation span {
@@ -187,7 +187,8 @@ html>body .ngg-album {
 .ngg-navigation span.prev {
 	border:1px solid #DDDDDD;
 	margin-right:3px;
-	padding:2px 8px;
+	padding:3px 8px;
+    text-decoration: none;
 }
 
 .ngg-navigation a.page-numbers:hover,
