Made interface and text adjustments as discussed after 4.4 RC2 test results.
Embed jQuery UI styles and images as otherwise could break on certain sites.

--HG--
branch : module_autoupdate_admin

--- a/products/photocrati_nextgen/modules/autoupdate_admin/static/admin.css
+++ b/products/photocrati_nextgen/modules/autoupdate_admin/static/admin.css
@@ -30,7 +30,9 @@ margin:0 0 8px 0;
 #update-content .details .show-log {
 margin:0;
 }
+#update-content .details .show-log-button {
+margin-right:20px;
+}
 button.download-log {
-margin-left:20px;
 margin-bottom:4px;
 }
