--- a/products/photocrati_nextgen/modules/nextgen_settings/css/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/css/nextgen_settings_page.css
@@ -68,8 +68,33 @@
 	z-index: 10;
 }
 
+.full-width {
+	width: 100%;
+}
+
+.right-aligned {
+	text-align: right;
+}
+label.align-to-top,
+td.align-to-top {
+	vertical-align: top
+}
+
 #lightbox_library_advanced_settings td {
 	text-align: right;
+}
+
+#cssfile_contents {
+	background: #F9F9F9;
+	font-family: Consolas,Monaco,monospace;
+	font-size: 12px;
+	width: 100%;
+	height: 300px;
+	outline: 0;
+}
+
+#writable_identicator {
+	display: inline;
 }
 
 .entity_errors {
