Added basic support for selecting display types in the attach to post interface
--HG--
branch : attach-to-post-interface

--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -29,8 +29,25 @@ iframe {
 	background: transparent;
 }
 
+/** Would would you like to display tab? **/
 #source_configuration td{
 	vertical-align: top;
+}
+
+/** Select a display type tab **/
+.display_type_preview {
+	float: left;
+	width: 25%;
+}
+.display_type_preview .image_container {
+	width: 100%;
+	vertical-align: middle;
+	text-align: center;
+	font-size: 12px;
+	font-weight: 600;
+}
+.display_type_preview .image_container p {
+	display: inline-block;
 }
 
 /** Display Tab **/
