Initial changes to support saving a displayed gallery
--HG--
branch : attach-to-post-interface

--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -5,6 +5,17 @@ html,body {
 	margin: 0px;
 }
 
+.entity_errors {
+	color: red;
+}
+
+.entity_errors ul {
+	margin-left: 30px;
+}
+.entity_errors ul li{
+	list-style-type: disc;
+}
+
 .ui-helper-reset {
 	font-size: 99%;
 }
