Fixed a problem with iframely being applied whether a page was loaded in an iframe or not. As well, started implementation of Display Settings in attach to post interface

--- a/products/photocrati_nextgen/modules/gallery_display/static/iframely.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/iframely.css
@@ -1,10 +1,9 @@
-html,
-html.wp-toolbar{
+html#iframely{
 	padding: 0px;
 	overflow: visible;
 }
 
-#wpbody-content {
+#iframely #wpbody-content {
 	float: none;
 	padding: 0px;
 }
