Fixed problem with iframes not resizing correctly in attach to post interface when viewed with Firefox. Also adjusted ngglegacy's "Add Images" page to use accordions instead of horizontal tabs

--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -144,3 +144,18 @@ iframe {
 table {
 	font-size: 13px;
 }
+
+/**
+ * Hacks used to ensure that Firefox can calculate the height of hidden content
+ * in iframes
+**/
+.ui-tabs {
+	visibility: visible;
+	position: relative;
+}
+.ui-tabs
+.ui-tabs-hide {
+	display: block !important;
+	visibility: hidden;
+	position: absolute;
+}
