--- a/products/photocrati_nextgen/modules/nextgen_settings/css/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/css/nextgen_settings_page.css
@@ -2,6 +2,9 @@
 	width: 80%;
 	height: 100%;
 }
+.gallery_page_ngg_other_options table tr td:first-child {
+    vertical-align: top;
+}
 .gallery_page_ngg_other_options table.image_options {
 	width: 100%;
 }
@@ -100,4 +103,9 @@ td.align-to-top {
 }
 .entity_errors ul li{
 	list-style-type: disc;
+}
+
+.ui-accordion-header {
+    color: #5e9d2b !important;
+    background-color: #5e9d2b !important;
 }
