--- a/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
@@ -24,6 +24,47 @@
     width: 157px;
 }
 
+.gallery_page_ngg_display_settings label.tooltip {
+    position: relative;
+    cursor: help;
+    display: inline-block;
+    text-decoration: underline;
+    outline: none;
+    color: #21759B;
+}
+
+.gallery_page_ngg_display_settings label.tooltip span {
+    color: black;
+    text-align: left;
+    visibility: hidden;
+    position: absolute;
+    bottom: -20px;
+    right: -285px;
+    z-index: 999;
+    width: 250px;
+    margin-left: -127px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    opacity: 1;
+    background-color: #ddd;
+    background-image: -webkit-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -moz-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -ms-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -o-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    text-shadow: 0 1px 0 rgba(255,255,255,.4);
+}
+
+.gallery_page_ngg_display_settings label.tooltip:hover span
+{
+  visibility: visible;
+}
+
 .ngg_slideshow_gallery_width,
 .ngg_slideshow_gallery_height,
 .ngg_thumbnail_dimension_width,
