Adding setting fields to basic-singlepic display type
--HG--
branch : gallery-basic-singlepic
rename : products/photocrati_nextgen/modules/nextgen_basic_singlepic/templates/nextgen_basic_singlepic_settings_default.php => products/photocrati_nextgen/modules/nextgen_basic_singlepic/templates/nextgen_basic_singlepic_settings_link.php

--- a/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
@@ -68,7 +68,9 @@
 .ngg_slideshow_gallery_width,
 .ngg_slideshow_gallery_height,
 .ngg_thumbnail_dimension_width,
-.ngg_thumbnail_dimension_height {
+.ngg_thumbnail_dimension_height,
+.ngg_singlepic_dimension_width,
+.ngg_singlepic_dimension_height {
     width: 65px !important;
 }
 
