--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -1,6 +1,6 @@
 html,body {
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 	padding: 0px;
 	margin: 0px;
 	font-size: 13px;
@@ -34,7 +34,7 @@ html,body {
 
 iframe {
 	width: 100%;
-	height: 100%;
+	height: 100%; /* this does not cause problems with artifical height of attach to post interface */
 	border: 0px;
 	padding: 0px;
 	margin: 0px;
