--- a/products/photocrati_nextgen/modules/ngglegacy/admin/css/nggadmin.css
+++ b/products/photocrati_nextgen/modules/ngglegacy/admin/css/nggadmin.css
@@ -1,6 +1,10 @@
-/* 
+/*
 ** NextGEN Gallery Style for Wordpress 3.3
 */
+
+#iframely h2.title {
+	display: none;
+}
 
 /* SETTINGS FOR Overview Gallery */
 
@@ -74,10 +78,10 @@
 	vertical-align:top;
 }
 
-/* SETTINGS FOR THE OPTIONS TABLE */ 
+/* SETTINGS FOR THE OPTIONS TABLE */
 .ngg-options th {
 	width:22%;
-} 
+}
 
 a.switch-expert {
 	text-decoration:none;
@@ -176,40 +180,40 @@ p#ngg-inlinebutton {
 
 div .progressborder {
 	border:1px solid #DDDDDD;
-	display: block; 
-	height: 30px; 
-	background-color: #464646; 
+	display: block;
+	height: 30px;
+	background-color: #464646;
 	width: 100%;
 	margin-top: 15px;
 	margin-bottom: 15px;
-    -moz-border-radius: 5px; 
-    -webkit-border-radius: 5px; 
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
 }
 
 div .progressbar {
-	border: medium none ; 
-	display: block; 
-	height: 30px; 
-	background-color: #D54E21; 
+	border: medium none ;
+	display: block;
+	height: 30px;
+	background-color: #D54E21;
 	width: 0%;
-    -moz-border-radius: 5px; 
-    -webkit-border-radius: 5px; 
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
 }
 
 div .progressbar span {
-	display: inline; 
-	position: absolute; 
-	color: white; 
-	font-weight: bold; 
+	display: inline;
+	position: absolute;
+	color: white;
+	font-weight: bold;
 	padding: 5px 0 0 5px;
 }
 
 .show_details
 {
 	height: 16px;
-	line-height: 20px; 
+	line-height: 20px;
 	overflow: hidden;
 	min-width: 8em;
 	padding: 3px;
@@ -221,7 +225,7 @@ div .progressbar span {
 	border-bottom:1px solid #999;
 	white-space:pre;
 }
-.show_details:hover 
+.show_details:hover
 {
 	height: auto;
 	overflow: visible;
@@ -289,8 +293,8 @@ div .innerhandle {
 }
 
 .itemContent p {
-	border: 0;  
-	margin: 0;  
+	border: 0;
+	margin: 0;
 	padding: 0;
 }
 
@@ -330,7 +334,7 @@ div .innerhandle {
 }
 
 .widget-holder {
-	min-height: 400px;	
+	min-height: 400px;
 	padding-top:1px;
 }
 
@@ -353,7 +357,7 @@ div.widget-top {
 	font-size: 13px;
 }
 
-.ui-autocomplete-start { background-position: 99% center; }	
+.ui-autocomplete-start { background-position: 99% center; }
 
 /* SETTINGS FOR SORT GALLERY */
 
@@ -376,9 +380,9 @@ p#sortButton{
 .imageBox_theImage{
 	width:110px;	/* Width of image */
 	height:125px;	/* Height of image */
-	
+
 	background-position: center;
-	background-repeat: no-repeat;		
+	background-repeat: no-repeat;
 	margin: 0 auto;
 	margin-bottom:2px;
 }
@@ -401,13 +405,13 @@ p#sortButton{
 .imageBox_label{	/* Title of images - both selected and not selected */
 	text-align:center;
 	font-family: arial;
-	font-size:11px;		
+	font-size:11px;
 	padding-top:2px;
 	margin: 0 auto;
 }
 
-/* 
-DIV that indicates where the dragged image will be placed	
+/*
+DIV that indicates where the dragged image will be placed
 */
 
 #insertionMarker{
@@ -421,13 +425,13 @@ DIV that indicates where the dragged image will be placed
 	height:145px;	/* To adjust the height of the div that indicates where the dragged image will be dropped */
 
 }
-	
+
 #insertionMarker img{
 	float:left;
 }
 
 /*
-DIV that shows the image as you drag it 
+DIV that shows the image as you drag it
 */
 
 #dragDropContent{
@@ -435,14 +439,14 @@ DIV that shows the image as you drag it
 	opacity:0.4;	/* 40 % opacity */
 	filter:alpha(opacity=40);	/* 40 % opacity */
 
-	/* 
-	No need to change these three values 
+	/*
+	No need to change these three values
 	*/
 	position:absolute;
 	z-index:10;
 	display:none;
-		
-}	
+
+}
 
 /* UPGRADE PAGE */
 
@@ -453,9 +457,9 @@ DIV that shows the image as you drag it
 	padding:10px;
 }
 
-/* ABOUT PAGE */ 
+/* ABOUT PAGE */
 .ngg-list {
-	font-size:11px; 
+	font-size:11px;
 	margin-left:15px;
 	list-style-position:inside;
 	list-style-type:disc;
