Removed large white-space in attach to post interface

--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -34,7 +34,7 @@ html,body {
 
 iframe {
 	width: 100%;
-	height: 100%; /* this does not cause problems with artifical height of attach to post interface */
+	height: 80%;
 	border: 0px;
 	padding: 0px;
 	margin: 0px;
@@ -192,4 +192,5 @@ table {
 	display: block !important;
 	visibility: hidden;
 	position: absolute;
+	top: -5000px;
 }
