Added watermark preview to settings display
--HG--
branch : watermark-settings

--- a/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
@@ -21,5 +21,9 @@
 
 #nextgen_settings_wmXpos,
 #nextgen_settings_wmYpos {
-    width: 65px;
+    width: 65px !important;
+}
+
+table.nextgen_settings_position {
+    width: auto !important;
 }
