Fixed jQuery sorting in preview area (thanks Benjamin)
--HG--
branch : attach-to-post-module

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -142,7 +142,7 @@ iframe {
 }
 
 #preview_tab_content .placeholder{
-	background-color:#FEEFB3;
+	background-color: #e0ddc1;
 	position: relative;
 }
 
