Committing changes before I wreck things. Going to try adjusting how the preview area renders. It's currently having problems
--HG--
branch : attach-to-post-module

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -161,6 +161,14 @@ iframe {
 	width: 60px;
 	display: inline-block;
 }
+#preview_tab_content .header_row .separator {
+	display: inline-block;
+	margin: 0px 5px;
+}
+
+#preview_tab_content .header_row .selected {
+	font-weight: bold;
+}
 
 #preview_tab_content #entity_list li.clear {
 	float: none;
