Finished frame implementing frame notifications for the attach to post interface

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -233,3 +233,10 @@ table {
 	position: absolute;
 	top: -5000px;
 }
+
+/**
+ * Make the active tab still clickable
+ **/
+.ui-tabs-nav li a.ui-state-active, .ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
+	cursor: pointer;
+}
