--- a/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
@@ -27,3 +27,54 @@
 table.nextgen_settings_position {
     width: auto !important;
 }
+
+
+span.tooltip,
+label.tooltip {
+    position: relative;
+    cursor: help;
+    display: inline-block;
+    text-decoration: underline;
+    outline: none;
+    color: #21759B;
+}
+
+span.tooltip span,
+label.tooltip span {
+    color: black;
+    text-align: left;
+    visibility: hidden;
+    position: absolute;
+    bottom: -20px;
+    right: -285px;
+    z-index: 999;
+    width: 250px;
+    margin-left: -127px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    opacity: 1;
+    background-color: #ddd;
+    background-image: -webkit-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -moz-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -ms-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: -o-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+    text-shadow: 0 1px 0 rgba(255,255,255,.4);
+}
+
+span.tooltip-left span,
+label.tooltip-left span {
+    right: 0;
+    left: -160px;
+}
+
+span.tooltip:hover span,
+label.tooltip:hover span
+{
+    visibility: visible;
+}
