make template setting use select box instead of text input

--- a/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
@@ -60,3 +60,7 @@
     color: #5e9d2b !important;
     background-color: #5e9d2b !important;
 }
+
+.ngg_settings_template {
+    width: 250px !important;
+}
