Fixed display problem of portraits images in attach to post preview area. Also resolved a problem with the frame event publisher JS not working correctly on Windows due to lack of JavaScript 1.6 support
--HG--
branch : add-frame-event-handlers

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -117,15 +117,13 @@ iframe {
 }
 
 #preview_tab_content .image_container {
-	width: 100px;
-	height: 100px;
-	max-width: 100px;
-	max-height: 100px;
 	background-color: white;
+	background-repeat: no-repeat;
+	background-position: center center;
 	padding: 20px;
-	margin: 20px;
+	margin: 7px;
 	border: solid 1px black;
-	display: table-cell;
+	display: block;
 	vertical-align: middle;
 	text-align: center;
 	position: relative;
@@ -137,7 +135,6 @@ iframe {
 
 #preview_tab_content #entity_list  li{
 	float: left;
-	padding: 10px;
 }
 
 #preview_tab_content #entity_list .ui-state-default {
