--- a/products/photocrati_nextgen/modules/attach_to_post/static/iframely.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/iframely.css
@@ -5,8 +5,9 @@
 }
 
 #iframely {
-    position: absolute;
-    opacity: 0.0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0.0;
 	background-position: center center;
 	background-repeat: no-repeat;
 }
