--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -35,7 +35,7 @@ html,body {
 iframe {
 	width: 100%;
 	height: 100px;
-	border: 0px;
+	border: none;
 	padding: 0px;
 	margin: 0px;
 	background: transparent;
