--- a/products/photocrati_nextgen/modules/attach_to_post/static/iframely.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/iframely.css
@@ -10,6 +10,8 @@
 	opacity: 0.0;
 	background-position: center center;
 	background-repeat: no-repeat;
+	position: absolute;
+	visibility: hidden;
 }
 
 #iframely #wpbody-content {
