Switched from Chosen to Select2, solved remaining issues in IE8
--HG--
branch : add-frame-event-handlers

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -245,3 +245,11 @@ table {
 .ui-tabs-nav li a.ui-state-active, .ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
 	cursor: pointer;
 }
+
+.select2-result-label {
+	white-space: nowrap;
+}
+.select2-results {
+	font-family: 'segoe ui', Arial, sans-serif;
+	font-size: 13px;
+}
