Removed chosen libraries
--HG--
branch : add-frame-event-handlers

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -253,3 +253,6 @@ table {
 	font-family: 'segoe ui', Arial, sans-serif;
 	font-size: 13px;
 }
+.select2-result-selectable {
+	white-space: nowrap;
+}
