--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -253,3 +253,12 @@ table {
 	font-family: 'segoe ui', Arial, sans-serif;
 	font-size: 13px;
 }
+
+/**
+ * Make the accordion tabs clickable
+ */
+ .accordion h3 a {
+	 width: 100%;
+	 display: inline-block;
+	 position: absolute;
+ }
